Image Sequences have no data on file load #75589

Closed
opened 2020-04-10 16:42:02 +02:00 by Christopher Gearhart · 8 comments

System Information
Operating system: Windows 10
Graphics card: Irrelevant

Blender Version
Broken: 2.80 - 2.83 (1a3928f33c)
Worked: 2.79

Short description of error

Image sequences do not contain any data when file is opened, and no python call (e.g. image.update(), image.reload()) can change this.

Exact steps for others to reproduce the error

It's important that you follow the below steps exactly; any slight variation may not produce the bug.

  1. Open the default startup file
  2. Switch to the 'UV Editing' workspace and open an image sequence stored on your computer in the 'UV Editor'
  3. Make sure that the image's source is set to 'Sequence' in the right-hand UI menu of the 'UV Editor' (open by pressing n), and be sure the 'Frames' and 'Start' properties are properly set based on the sequence frame range.
  4. Switch to the 'Scripting' workspace (this is important!)
  5. Save the file somewhere on your computer, and close Blender.
  6. Re-open Blender and re-open the file you just saved
  7. Without switching from the 'Scripting' workspace, run the following script:
import bpy
for im in bpy.data.images:
    if im.name != "Render Result":
        break
print(im.has_data)
print(len(im.pixels))
im.reload()
im.update()
print(im.has_data)
  1. This will throw a RuntimeError that the sequence has no data at the im.update() line. The only way to get the script to work is to switch over to the 'UV Editing' workspace, open the sequence, and then run the script.

or

  1. Unzip attached file
  2. Open blend file and run the script

img_seq_script_bug.zip

**System Information** Operating system: Windows 10 Graphics card: Irrelevant **Blender Version** Broken: 2.80 - 2.83 (1a3928f33c76) Worked: 2.79 **Short description of error** Image sequences do not contain any data when file is opened, and no python call (e.g. `image.update()`, `image.reload()`) can change this. **Exact steps for others to reproduce the error** It's important that you follow the below steps *exactly*; any slight variation may not produce the bug. 1. Open the default startup file 2. Switch to the 'UV Editing' workspace and open an image **sequence** stored on your computer in the 'UV Editor' 3. Make sure that the image's source is set to 'Sequence' in the right-hand UI menu of the 'UV Editor' (open by pressing `n`), and be sure the 'Frames' and 'Start' properties are properly set based on the sequence frame range. 4. Switch to the 'Scripting' workspace (this is important!) 5. Save the file somewhere on your computer, and close Blender. 6. Re-open Blender and re-open the file you just saved 7. Without switching from the 'Scripting' workspace, run the following script: ``` import bpy for im in bpy.data.images: if im.name != "Render Result": break print(im.has_data) print(len(im.pixels)) im.reload() im.update() print(im.has_data) ``` 8. This will throw a RuntimeError that the sequence has no data at the `im.update()` line. The only way to get the script to work is to switch over to the 'UV Editing' workspace, open the sequence, and then run the script. or 1. Unzip attached file 2. Open blend file and run the script [img_seq_script_bug.zip](https://archive.blender.org/developer/F8469186/img_seq_script_bug.zip)

Added subscriber: @bblanimation

Added subscriber: @bblanimation

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I suspect this problem is COW related

I suspect this problem is `COW` related

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2020-04-14 18:10:39 +02:00

If there is one thing where CoW/depsgraph should not be involved at all, it's "static" data access...

This is just a failure of logic loading images on demand, fix incoming.

If there is one thing where CoW/depsgraph should not be involved at all, it's "static" data access... This is just a failure of logic loading images on demand, fix incoming.

This issue was referenced by dc66fa5c9c

This issue was referenced by dc66fa5c9cf925d889d05e05f53102ef7eacfda2

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75589
No description provided.